--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "digest_tool"
-version = "0.1.2"
+version = "0.1.3"
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -14,3 +14,4 @@ typenum = "1.14.0"
 clap = "2.33.3"
 hex-literal = "0.3.3"
 sha3 = "0.9.1"
+indicatif = "0.16.2"
