--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "digest_tool"
-version = "0.1.3"
+version = "0.1.4"
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -15,3 +15,5 @@ clap = "2.33.3"
 hex-literal = "0.3.3"
 sha3 = "0.9.1"
 indicatif = "0.16.2"
+log = "0.4.14"
+env_logger = "0.9.0"
