--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "digest_tool"
-version = "0.1.4"
+version = "0.1.5"
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -17,3 +17,4 @@ sha3 = "0.9.1"
 indicatif = "0.16.2"
 log = "0.4.14"
 env_logger = "0.9.0"
+web-view = { version = "0.7", features = ["edge"] }
